implemented __rpow__ for vectors

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -103,15 +103,13 @@
       "└──────────────┘\n",
       "2**A:\n",
       "\n",
-      "┌──────────────┐\n",
-      "│axis │value   │\n",
-      "├─────┼────────┤\n",
-      "│x    │100     │\n",
-      "│y    │100     │\n",
-      "└──────────────┘\n",
-      "A@A:\n",
-      "\n",
-      "200\n"
+      "┌───────────────┐\n",
+      "│axis │value    │\n",
+      "├─────┼─────────┤\n",
+      "│x    │1024     │\n",
+      "│y    │1024     │\n",
+      "└───────────────┘\n",
+      "A@A: 200\n"
      ]
     }
    ],
@@ -129,8 +127,8 @@
     "print('A / B:', A / B, sep = '\\n'*2)\n",
     "print('A ** B:', A ** B, sep = '\\n'*2)\n",
     "print('A**2:', A**2, sep = '\\n'*2)\n",
-    "print('2**A:', A**2, sep = '\\n'*2)\n",
-    "print('A@A:', A@A, sep = '\\n'*2)"
+    "print('2**A:', 2**A, sep = '\\n'*2)\n",
+    "print('A@A:', A@A)"
    ]
   },
   {
@@ -176,19 +174,19 @@
       "┌────────────────────────────┐\n",
       "│axis     │function          │\n",
       "├─────────┼──────────────────┤\n",
-      "│dx_dx    │(y*10)            │\n",
       "│dx_dy    │(x*10+1.0)        │\n",
-      "│dy_dx    │1.0               │\n",
+      "│dx_dx    │(y*10)            │\n",
       "│dy_dy    │0.0               │\n",
+      "│dy_dx    │1.0               │\n",
       "└────────────────────────────┘\n",
       "function's yacobian value: \n",
       "┌────────────────────┐\n",
       "│axis     │value     │\n",
       "├─────────┼──────────┤\n",
-      "│dx_dx    │110       │\n",
       "│dx_dy    │101.0     │\n",
-      "│dy_dx    │1.0       │\n",
+      "│dx_dx    │110       │\n",
       "│dy_dy    │0.0       │\n",
+      "│dy_dx    │1.0       │\n",
       "└────────────────────┘\n"
      ]
     }
@@ -271,14 +269,14 @@
       "│x    │-28         │\n",
       "│y    │(22-1j)     │\n",
       "└──────────────────┘\n",
-      "┌────────────────────────────────┐\n",
-      "│axis     │function              │\n",
-      "├─────────┼──────────────────────┤\n",
-      "│dx_dx    │((-y*10)+-3.0)        │\n",
-      "│dx_dy    │0.0                   │\n",
-      "│dy_dx    │(y*10)                │\n",
-      "│dy_dy    │(x*10+1.0)            │\n",
-      "└────────────────────────────────┘\n"
+      "┌───────────────────────────────────┐\n",
+      "│axis     │function                 │\n",
+      "├─────────┼─────────────────────────┤\n",
+      "│dx_dy    │((-(x*10+1.0))+3)        │\n",
+      "│dx_dx    │((-y*10)+-3.0)           │\n",
+      "│dy_dy    │(x*10+1.0)               │\n",
+      "│dy_dx    │(y*10)                   │\n",
+      "└───────────────────────────────────┘\n"
      ]
     }
    ],
@@ -308,7 +306,7 @@
       "┌───────────────────────────────────┐\n",
       "│axis   │function                   │\n",
       "├───────┼───────────────────────────┤\n",
-      "│div    │((-y*10)+x*10+-2.0)        │\n",
+      "│div    │(x*10+(-y*10)+-2.0)        │\n",
       "└───────────────────────────────────┘\n"
      ]
     }
@@ -330,8 +328,8 @@
       "┌───────────────────────┐\n",
       "│axis       │function   │\n",
       "├───────────┼───────────┤\n",
-      "│ddiv_dx    │10         │\n",
       "│ddiv_dy    │-10        │\n",
+      "│ddiv_dx    │10         │\n",
       "└───────────────────────┘\n"
      ]
     }
