Nurzhan: реализация численных методов и настройка пакета
Основные изменения:
- Добавлен calculus.py с jacobian() и divergence()
- Численные методы с адаптивным шагом
- Настроена сборка пакета (setup.py, pyproject.toml)
- Добавлены тесты в tests/
- Обновлена документация

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bc0fb968",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f4270e38",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
     "A = vector(x = 10, y = 10)\n",
     "B = vector(x = 3, y = -1, z = 1)\n",
     "\n",
-    "print('A:', A, sep = '\\n'*2)\n",
+    "print('A:', A, sep = '\\n'*2)1\n",
     "print('B:', B, sep = '\\n'*2)\n",
     "print('A + B:', A + B, sep = '\\n'*2)\n",
     "print('A - B:', A - B, sep = '\\n'*2)\n",
@@ -382,6 +382,42 @@
    ],
    "source": [
     "print(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46012a6a",
+   "metadata": {},
+   "source": [
+    "# Jacobian and Divergence "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff117f0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a vector field: F(x,y) = [x*y, x+y]\n",
+    "def field(state):\n",
+    "    x, y = state['x'], state['y']\n",
+    "    return vector({'x': x*y, 'y': x + y})\n",
+    "\n",
+    "# Create vector function object\n",
+    "F = vector_function(lambda x, y: vector({'x': x*y, 'y': x + y}))\n",
+    "\n",
+    "# Point to evaluate at\n",
+    "point = vector({'x': 2.0, 'y': 3.0})\n",
+    "\n",
+    "# Compute Jacobian numerically\n",
+    "J_num = jacobian(field, point)\n",
+    "print(\"Numerical Jacobian:\")\n",
+    "print(J_num)\n",
+    "\n",
+    "# Compute divergence numerically\n",
+    "div_num = divergence(field, point)\n",
+    "print(f\"\\nNumerical Divergence: {div_num}\")"
    ]
   },
   {
