--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "bc0fb968",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "f4270e38",
    "metadata": {},
    "outputs": [
@@ -51,8 +51,8 @@
       "│axis │value   │\n",
       "├─────┼────────┤\n",
       "│x    │13      │\n",
-      "│z    │1.0     │\n",
       "│y    │9       │\n",
+      "│z    │1.0     │\n",
       "└──────────────┘\n",
       "A - B:\n",
       "\n",
@@ -60,8 +60,8 @@
       "│axis │value    │\n",
       "├─────┼─────────┤\n",
       "│x    │7        │\n",
-      "│z    │-1.0     │\n",
       "│y    │11       │\n",
+      "│z    │-1.0     │\n",
       "└───────────────┘\n",
       "A @ B:\n",
       "\n",
@@ -72,8 +72,8 @@
       "│axis │value   │\n",
       "├─────┼────────┤\n",
       "│x    │30      │\n",
-      "│z    │0.0     │\n",
       "│y    │-10     │\n",
+      "│z    │0.0     │\n",
       "└──────────────┘\n",
       "A / B:\n",
       "\n",
@@ -81,8 +81,8 @@
       "│axis │value                  │\n",
       "├─────┼───────────────────────┤\n",
       "│x    │3.3333333333333335     │\n",
-      "│z    │0.0                    │\n",
       "│y    │-10.0                  │\n",
+      "│z    │0.0                    │\n",
       "└─────────────────────────────┘\n",
       "A ** B:\n",
       "\n",
@@ -90,8 +90,8 @@
       "│axis │value    │\n",
       "├─────┼─────────┤\n",
       "│x    │1000     │\n",
-      "│z    │0.0      │\n",
       "│y    │0.1      │\n",
+      "│z    │0.0      │\n",
       "└───────────────┘\n",
       "A**2:\n",
       "\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "3def81cb",
    "metadata": {},
    "outputs": [
@@ -174,19 +174,19 @@
       "┌────────────────────────────┐\n",
       "│axis     │function          │\n",
       "├─────────┼──────────────────┤\n",
-      "│dx_dy    │(x*10+1.0)        │\n",
       "│dx_dx    │(y*10)            │\n",
-      "│dy_dy    │0.0               │\n",
+      "│dx_dy    │(x*10+1.0)        │\n",
       "│dy_dx    │1.0               │\n",
+      "│dy_dy    │0.0               │\n",
       "└────────────────────────────┘\n",
       "function's yacobian value: \n",
       "┌────────────────────┐\n",
       "│axis     │value     │\n",
       "├─────────┼──────────┤\n",
-      "│dx_dy    │101.0     │\n",
       "│dx_dx    │110       │\n",
-      "│dy_dy    │0.0       │\n",
+      "│dx_dy    │101.0     │\n",
       "│dy_dx    │1.0       │\n",
+      "│dy_dy    │0.0       │\n",
       "└────────────────────┘\n"
      ]
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "d42bc5ce",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "3c7b04bd",
    "metadata": {},
    "outputs": [
@@ -269,14 +269,14 @@
       "│x    │-28         │\n",
       "│y    │(22-1j)     │\n",
       "└──────────────────┘\n",
-      "┌───────────────────────────────────┐\n",
-      "│axis     │function                 │\n",
-      "├─────────┼─────────────────────────┤\n",
-      "│dx_dy    │((-(x*10+1.0))+3)        │\n",
-      "│dx_dx    │((-y*10)+-3.0)           │\n",
-      "│dy_dy    │(x*10+1.0)               │\n",
-      "│dy_dx    │(y*10)                   │\n",
-      "└───────────────────────────────────┘\n"
+      "┌────────────────────────────────┐\n",
+      "│axis     │function              │\n",
+      "├─────────┼──────────────────────┤\n",
+      "│dx_dx    │((-y*10)+-3.0)        │\n",
+      "│dx_dy    │0.0                   │\n",
+      "│dy_dx    │(y*10)                │\n",
+      "│dy_dy    │(x*10+1.0)            │\n",
+      "└────────────────────────────────┘\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "547131a0",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
       "┌───────────────────────────────────┐\n",
       "│axis   │function                   │\n",
       "├───────┼───────────────────────────┤\n",
-      "│div    │(x*10+(-y*10)+-2.0)        │\n",
+      "│div    │((-y*10)+x*10+-2.0)        │\n",
       "└───────────────────────────────────┘\n"
      ]
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "f7ceea16",
    "metadata": {},
    "outputs": [
@@ -328,8 +328,8 @@
       "┌───────────────────────┐\n",
       "│axis       │function   │\n",
       "├───────────┼───────────┤\n",
-      "│ddiv_dy    │-10        │\n",
       "│ddiv_dx    │10         │\n",
+      "│ddiv_dy    │-10        │\n",
       "└───────────────────────┘\n"
      ]
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "dc09e2d2",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "62ad0c63",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "ff117f0b",
    "metadata": {},
    "outputs": [
@@ -448,15 +448,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "59c23e17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import gauss\n",
+    "import random as randm\n",
+    "from random import gauss, random\n",
     "import diffeq.plotting.interactive as interactive\n",
     "from diffeq import *\n",
-    "solver = rk4_integrator(0.001, 10)"
+    "solver = rk4_integrator(0.01, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d6dada33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randm.seed(42)"
    ]
   },
   {
@@ -469,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "c7021a99",
    "metadata": {},
    "outputs": [],
@@ -488,8 +499,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3595df5",
+   "metadata": {},
+   "source": [
+    "### Rössler Attractor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "d9f1feba",
    "metadata": {},
    "outputs": [],
@@ -508,14 +527,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8df9cd46",
+   "metadata": {},
+   "source": [
+    "### Lu Chen Attractor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "id": "dc2c66df",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lu Chen Attractor\n",
-    "a, b, c, u = 36, 20, 3, -15.15\n",
+    "a, b, c, u = 36, 3, 20, -3\n",
     "multiscroll_sys = system(\n",
     "    vector_function(lambda x, y, z:vector(x = a*(y - x), y = x - x*z + c*y + u, z = x*y-b*z)), solver\n",
     "    )\n",
@@ -528,8 +555,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c39440e",
+   "metadata": {},
+   "source": [
+    "### Trillium Attractor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "id": "942f9d45",
    "metadata": {},
    "outputs": [],
@@ -548,8 +583,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b1bb0df",
+   "metadata": {},
+   "source": [
+    "### Tomas Attractor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
+   "id": "0cff65d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tomas Attractor\n",
+    "a, b = 0.2, 1.0\n",
+    "tomas_sys = system(\n",
+    "    vector_function(lambda x, y, z:vector(x = -a*x + b*symb.sin(y), y = -a*y + b*symb.sin(z), z = -a*z + b*symb.sin(x))), solver\n",
+    "    )\n",
+    "tomas_trjs = []\n",
+    "for _ in range(10): \n",
+    "    tomas_sys.state = 5*(vector(x = random(), y = random(), z = random())*2 - 1.0)\n",
+    "    results = tomas_sys.run(100)\n",
+    "    tomas_trjs.append(results)\n",
+    "out = interactive.generate_html(tomas_trjs, ('x', 'y', 'z'), color = interactive.start_end_grad(), title = 'Tomas Attractor', path = 'output/tomas.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13339c6a",
+   "metadata": {},
+   "source": [
+    "### linear system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "a5009c69",
    "metadata": {},
    "outputs": [],
