--- a/examples.ipynb
+++ b/examples.ipynb
@@ -12,6 +12,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b417a28",
+   "metadata": {},
+   "source": [
+    "## symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "82ba4420",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((x^2)+y*x+cos(x)+3)\n",
+      "без оптимизаций:\n",
+      "(2*(x^1)*1.0+(0.0*x+y*1.0)+(-sin(x))*1.0+0.0)\n",
+      "(2*(x^1)*0.0+(1.0*x+y*0.0)+(-sin(x))*0.0+0.0)\n",
+      "с оптимизациями:\n",
+      "(x*2+y+sin(x)*-1)\n",
+      "x\n",
+      "дважды производная:\n",
+      "((1^2)*(x^0)*2+cos(x)*-1)\n",
+      "упаковка в \"программы\"\n",
+      "порядок выполнения:\n",
+      "x,y,3\n",
+      "(x^2),y*x,cos(x)\n",
+      "((x^2)+y*x+cos(x)+3)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from diffeq.utils.symbolic import *\n",
+    "x, y = variable('x'), variable('y')\n",
+    "expression = x**2 + y*x + cos(x) + 3\n",
+    "\n",
+    "print(expression)\n",
+    "\n",
+    "print('без оптимизаций:')\n",
+    "print(expression.diff('x'))\n",
+    "print(expression.diff('y'))\n",
+    "print('с оптимизациями:')\n",
+    "\n",
+    "print(expression.diff('x').optim())\n",
+    "print(expression.diff('y').optim())\n",
+    "\n",
+    "print('дважды производная:')\n",
+    "print(expression.diff('x').diff('x').optim())\n",
+    "\n",
+    "\n",
+    "print('упаковка в \"программы\"')\n",
+    "\n",
+    "prog = program({'output':expression})\n",
+    "prog(x = 1, y = 2)\n",
+    "\n",
+    "\n",
+    "print('порядок выполнения:')\n",
+    "print(prog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e6d612c6",
    "metadata": {},
    "source": [
@@ -20,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f4270e38",
    "metadata": {},
    "outputs": [
@@ -50,18 +115,18 @@
       "┌──────────────┐\n",
       "│axis │value   │\n",
       "├─────┼────────┤\n",
-      "│x    │13      │\n",
       "│y    │9       │\n",
       "│z    │1.0     │\n",
+      "│x    │13      │\n",
       "└──────────────┘\n",
       "A - B:\n",
       "\n",
       "┌───────────────┐\n",
       "│axis │value    │\n",
       "├─────┼─────────┤\n",
-      "│x    │7        │\n",
       "│y    │11       │\n",
       "│z    │-1.0     │\n",
+      "│x    │7        │\n",
       "└───────────────┘\n",
       "A @ B:\n",
       "\n",
@@ -71,27 +136,27 @@
       "┌──────────────┐\n",
       "│axis │value   │\n",
       "├─────┼────────┤\n",
-      "│x    │30      │\n",
       "│y    │-10     │\n",
       "│z    │0.0     │\n",
+      "│x    │30      │\n",
       "└──────────────┘\n",
       "A / B:\n",
       "\n",
       "┌─────────────────────────────┐\n",
       "│axis │value                  │\n",
       "├─────┼───────────────────────┤\n",
-      "│x    │3.3333333333333335     │\n",
       "│y    │-10.0                  │\n",
       "│z    │0.0                    │\n",
+      "│x    │3.3333333333333335     │\n",
       "└─────────────────────────────┘\n",
       "A ** B:\n",
       "\n",
       "┌───────────────┐\n",
       "│axis │value    │\n",
       "├─────┼─────────┤\n",
-      "│x    │1000     │\n",
       "│y    │0.1      │\n",
       "│z    │0.0      │\n",
+      "│x    │1000     │\n",
       "└───────────────┘\n",
       "A**2:\n",
       "\n",
@@ -141,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3def81cb",
    "metadata": {},
    "outputs": [
@@ -174,19 +239,19 @@
       "┌────────────────────────────┐\n",
       "│axis     │function          │\n",
       "├─────────┼──────────────────┤\n",
-      "│dx_dx    │(y*10)            │\n",
       "│dx_dy    │(x*10+1.0)        │\n",
-      "│dy_dx    │1.0               │\n",
+      "│dx_dx    │(y*10)            │\n",
       "│dy_dy    │0.0               │\n",
+      "│dy_dx    │1.0               │\n",
       "└────────────────────────────┘\n",
       "function's yacobian value: \n",
       "┌────────────────────┐\n",
       "│axis     │value     │\n",
       "├─────────┼──────────┤\n",
-      "│dx_dx    │110       │\n",
       "│dx_dy    │101.0     │\n",
-      "│dy_dx    │1.0       │\n",
+      "│dx_dx    │110       │\n",
       "│dy_dy    │0.0       │\n",
+      "│dy_dx    │1.0       │\n",
       "└────────────────────┘\n"
      ]
     }
@@ -221,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d42bc5ce",
    "metadata": {},
    "outputs": [],
@@ -243,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3c7b04bd",
    "metadata": {},
    "outputs": [
@@ -269,14 +334,14 @@
       "│x    │-28         │\n",
       "│y    │(22-1j)     │\n",
       "└──────────────────┘\n",
-      "┌────────────────────────────────┐\n",
-      "│axis     │function              │\n",
-      "├─────────┼──────────────────────┤\n",
-      "│dx_dx    │((-y*10)+-3.0)        │\n",
-      "│dx_dy    │0.0                   │\n",
-      "│dy_dx    │(y*10)                │\n",
-      "│dy_dy    │(x*10+1.0)            │\n",
-      "└────────────────────────────────┘\n"
+      "┌───────────────────────────────────┐\n",
+      "│axis     │function                 │\n",
+      "├─────────┼─────────────────────────┤\n",
+      "│dx_dy    │((-(x*10+1.0))+3)        │\n",
+      "│dx_dx    │((-y*10)+-3.0)           │\n",
+      "│dy_dy    │(x*10+1.0)               │\n",
+      "│dy_dx    │(y*10)                   │\n",
+      "└───────────────────────────────────┘\n"
      ]
     }
    ],
@@ -295,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "547131a0",
    "metadata": {},
    "outputs": [
@@ -306,7 +371,7 @@
       "┌───────────────────────────────────┐\n",
       "│axis   │function                   │\n",
       "├───────┼───────────────────────────┤\n",
-      "│div    │((-y*10)+x*10+-2.0)        │\n",
+      "│div    │(x*10+(-y*10)+-2.0)        │\n",
       "└───────────────────────────────────┘\n"
      ]
     }
@@ -317,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f7ceea16",
    "metadata": {},
    "outputs": [
@@ -328,8 +393,8 @@
       "┌───────────────────────┐\n",
       "│axis       │function   │\n",
       "├───────────┼───────────┤\n",
-      "│ddiv_dx    │10         │\n",
       "│ddiv_dy    │-10        │\n",
+      "│ddiv_dx    │10         │\n",
       "└───────────────────────┘\n"
      ]
     }
@@ -348,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "dc09e2d2",
    "metadata": {},
    "outputs": [],
@@ -362,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "62ad0c63",
    "metadata": {},
    "outputs": [
@@ -394,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ff117f0b",
    "metadata": {},
    "outputs": [
@@ -448,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "59c23e17",
    "metadata": {},
    "outputs": [],
@@ -462,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d6dada33",
    "metadata": {},
    "outputs": [],
@@ -480,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "c7021a99",
    "metadata": {},
    "outputs": [],
@@ -508,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d9f1feba",
    "metadata": {},
    "outputs": [],
@@ -536,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "dc2c66df",
    "metadata": {},
    "outputs": [],
@@ -564,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "942f9d45",
    "metadata": {},
    "outputs": [],
@@ -592,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "0cff65d1",
    "metadata": {},
    "outputs": [],
@@ -620,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "a5009c69",
    "metadata": {},
    "outputs": [],
